--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -7,13 +7,26 @@
     text-align: center;
     margin: 0;
   }
+
+  &__adress {
+    @media (max-width: 767px) {
+      margin-bottom: 60px;
+    }
+  }
+
   &__social {
-    padding-top: 10px;
+    margin-bottom: 60px;
+    @media (min-width: 1200px) {
+      padding-top: 10px;
+    }
   }
 
   &__mailing-list {
     text-align: center;
-    padding-top: 10px;
+
+    @media (min-width: 1200px) {
+      padding-top: 10px;
+    }
   }
 
   &__logo {
@@ -79,6 +92,7 @@
 
 .subscription {
   &__input {
+    margin-bottom: 20px;
     width: 100%;
     padding-left: 16px;
     height: 50px;
@@ -92,6 +106,10 @@
 }
 
 .button-click {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
   width: 200px;
   height: 50px;
   background: #2196f3;
@@ -104,9 +122,6 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   letter-spacing: 0.06em;
 
   &__img {
