--- a/css/main.css
+++ b/css/main.css
@@ -272,14 +272,6 @@ a {
   margin-bottom: 30px;
 }
 
-@media (min-width: 768px) {
-  .peculiarities__flex {
-    width: 738px;
-    -ms-flex-preferred-size: calc((100% - 1 * 30px) / 2);
-        flex-basis: calc((100% - 1 * 30px) / 2);
-  }
-}
-
 .especially {
   margin-bottom: 30px;
   height: 120px;
@@ -408,15 +400,6 @@ a {
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background: #ffffff;
-}
-
-@media (min-width: 768px) {
-  .comand__list {
-    -ms-flex-preferred-size: calc((100% - 1 * 30px) / 3);
-        flex-basis: calc((100% - 1 * 30px) / 3);
-    margin-left: 30px;
-    margin-bottom: 30px;
-  }
 }
 
 .comand__list:not(:last-child) {
@@ -966,6 +949,12 @@ a {
 
 .buttons {
   padding: 60px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  list-style: none;
 }
 
 .buttons__flex li:not(:last-child) {
@@ -976,20 +965,31 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  width: 362px;
-  margin-right: 103px;
-  margin-top: 0;
   margin-bottom: 40px;
-  padding-left: 0;
+}
+
+@media (min-width: 768px) {
+  .buttons__flex {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .buttons__flex {
+    margin-bottom: 50px;
+  }
 }
 
 .buttons__list {
-  margin-right: 0;
+  margin-bottom: 15px;
   padding: 6px 22px;
   font-family: "Roboto";
   cursor: pointer;
@@ -1007,6 +1007,12 @@ a {
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media (min-width: 768px) {
+  .buttons__list {
+    margin-bottom: 0;
+  }
+}
+
 .buttons__list:hover {
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -1019,8 +1025,6 @@ a {
 }
 
 .cards {
-  padding-left: 0;
-  margin: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1028,12 +1032,21 @@ a {
       flex-wrap: wrap;
 }
 
+@media (min-width: 768px) {
+  .cards {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .cards__list {
   display: block;
   text-decoration: none;
   overflow: hidden;
-  width: 370px;
-  margin-right: 30px;
   margin-bottom: 30px;
   -webkit-transition-property: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1041,17 +1054,35 @@ a {
   transition-property: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media (min-width: 768px) {
+  .cards__list {
+    -ms-flex-preferred-size: calc((100% - 1 * 30px) / 2);
+        flex-basis: calc((100% - 1 * 30px) / 2);
+  }
+}
+
+@media (min-width: 1200px) {
+  .cards__list {
+    -ms-flex-preferred-size: calc((100% - 2 * 30px) / 3);
+        flex-basis: calc((100% - 2 * 30px) / 3);
+  }
+}
+
 .cards__list:hover {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.cards__list:nth-child(3n) {
-  margin-right: 0;
+@media (min-width: 1200px) {
+  .cards__list:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 
-.cards__list:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+@media (min-width: 1200px) {
+  .cards__list:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
 .cards__link:hover .cards__text {
@@ -1072,7 +1103,6 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 450px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1115,5 +1145,23 @@ a {
   font-weight: 400;
   line-height: 1.87;
   letter-spacing: 0.03em;
+}
+
+@media (min-width: 480px) and (max-width: 1199.95px) {
+  .tehnokryak {
+    height: 146px;
+  }
+}
+
+.mobnav {
+  margin-bottom: 50px;
+}
+
+.mobnav__contact {
+  margin-bottom: 60px;
+}
+
+.mobnav__item {
+  margin-bottom: 32px;
 }
 /*# sourceMappingURL=main.css.map */
