--- a/scss/components/_basic.scss
+++ b/scss/components/_basic.scss
@@ -28,8 +28,7 @@ a {
 
   padding: 0 15px;
 
-  @media screen and (max-width: 767px) {
-  }
+  @media screen and (max-width: 767px) {}
 
   @media screen and (min-width: 768px) {
     width: 738px;
