--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,8 +1,8 @@
 .buttons {
   padding: 60px 0;
-  // display: flex;
-  // flex-wrap: wrap;
-  // list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
 
   &__flex li:not(:last-child) {
     margin-right: 8px;
@@ -13,10 +13,19 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     margin-bottom: 40px;
+
+    @media (min-width: 768px) {
+      justify-content: center;
+      margin-bottom: 30px;
+    }
+
+    @media (min-width: 1200px) {
+      margin-bottom: 50px;
+    }
   }
 
   &__list {
-    margin-right: 0;
+    margin-bottom: 15px;
     padding: 6px 22px;
     font-family: "Roboto";
     cursor: pointer;
@@ -31,6 +40,11 @@
     transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
       color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+    @media (min-width: 768px) {
+      margin-bottom: 0;
+    }
   }
 
   &__list:hover {
