--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -92,7 +92,7 @@
 
 .nav,
 .contact {
-  // @media (max-width: 767.95px) {
-  //   display: none;
-  // }
+  display: none;
+
+  @media (max-width: 767.95px) {}
 }
