--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,4 +11,4 @@
 @import "./components/modal";
 @import "./components/buttons";
 @import "./components/cards";
-@import "./components/mobmenu";
+@import "./components/mob-menu";
