--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -92,7 +92,7 @@
 
 .nav,
 .contact {
-  display: none;
-
-  @media (max-width: 767.95px) {}
+  @media (max-width: 767.95px) {
+    display: none;
+  }
 }
