--- a/scss/components/_mob-menu.scss
+++ b/scss/components/_mob-menu.scss
@@ -1,45 +1,45 @@
 .burger {
-    // @media (min-width: 768px) {
-    //     display: none;
-    // }
+    @media (min-width: 768px) {
+        display: none;
+    }
 
-    // background-color: #ffffff;
-    // border: none;
+    background-color: #ffffff;
+    border: none;
 }
 
 .mob-menu {
-    // position: fixed;
-    // top: 0;
-    // left: 0;
-    // background: rgba(0, 0, 0, 0.2);
-    // width: 100%;
-    // height: 100%;
-    // transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    // &__block {
-    //     position: relative;
-    //     display: flex;
-    //     justify-content: space-between;
-    //     flex-direction: column;
-    //     padding: 48px 40px;
-    //     width: 100%;
-    //     height: 100%;
-    //     background-color: #ffffff;
+    &__block {
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        padding: 48px 40px;
+        width: 100%;
+        height: 100%;
+        background-color: #ffffff;
 
-    // }
+    }
 
-    // &__button {
-    //     position: absolute;
-    //     right: 8px;
-    //     top: 8px;
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-    //     border-radius: 50%;
-    //     border: none;
+    &__button {
+        position: absolute;
+        right: 15px;
+        top: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        border: none;
 
-    //     background-color: #ffffff;
-    // }
+        background-color: #ffffff;
+    }
 }
 
 .mobnav {
@@ -61,31 +61,31 @@
 }
 
 .socialmob {
-    // display: flex;
-    // flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 
-    // &__item:not(:last-child) {
-    //     margin-right: 10px;
-    // }
+    &__item:not(:last-child) {
+        margin-right: 10px;
+    }
 
-    // &__item {
-    //     font-weight: 500;
-    //     font-size: 18px;
-    //     line-height: 1.22;
+    &__item {
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 1.22;
 
-    //     letter-spacing: 0.02em;
-    //     color: #2196F3;
-    // }
+        letter-spacing: 0.02em;
+        color: #2196F3;
+    }
 
-    // &__line {
-    //     margin-right: 10px;
-    //     border: 1px solid rgba(33, 33, 33, 0.2);
-    //     transform: rotate(0deg);
-    // }
+    &__line {
+        margin-right: 10px;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        transform: rotate(0deg);
+    }
 }
 
 .burger-is-hidden {
-    // visibility: hidden;
-    // opacity: 0;
-    // pointer-events: none;
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
 }
